overflow fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,17 +11,19 @@
     margin: 0;
     padding: 0;
 }
-body{
+
+html, body{
     margin: 0 auto;
+    max-width: 100%;
+    overflow-x: hidden;
     background: #fff;
     font-family: 'Poppins', sans-serif;
-    overflow-x: hidden;
 }
 
 .wrapper{
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr auto 400px;
+    grid-template-rows: 1fr auto .5fr;
     gap: 50px;
 }
 .btn{
@@ -111,7 +113,7 @@ img{
 }
  .menu a{
      display: block;
-     width: 220px;
+     max-width: 220px;
      text-align: center;
  }
  .menu .btn{
@@ -268,7 +270,7 @@ li a{
 }
 @media (max-width:992px) {
     .wrapper{
-        grid-template-rows: 1fr auto auto 400px;
+        grid-template-rows: 1fr auto auto .5fr;
     }
     .sidebar, .main-content{
         grid-column: 2/-2;
@@ -343,7 +345,7 @@ li a{
 }
 @media (max-width:600px){
     .wrapper {
-        grid-template-rows: 1fr auto auto 400px;
+        grid-template-rows: 1fr auto auto .5fr;
     }
     .hero-container {
         grid-template-columns: repeat(1,1fr);
@@ -368,9 +370,9 @@ li a{
     
 }
 @media (max-width:480px){
-    .wrapper {
-        grid-template-rows: 1fr auto auto auto;
-    }
+    /* .wrapper {
+        grid-template-rows: 1fr auto auto 400px;
+    } */
     .headline {
         font-size: 32px;
     }
